--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <!-- footer + my Email -->
 
     <footer>
-        <h6><a href="mailto:Jaredtyrel@hotmail.com?subject=Hello%Jared"> Email Me!</a></h6>
+        <h6><a href="mailto:Jaredtyrel@hotmail.com?subject=Hello20%Jared"> Email Me!</a></h6>
     </footer>
 
     </body>
